--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link id="theme" rel="stylesheet" href="css/theme-1.css" >
 </head>
 <body>
-    
+    <header>
+        <h1>header</h1>
+    </header>
+
+    <main>main</main>
+    <footer>footer</footer>
     <script src="js/app.js"></script>
 </body>
 </html>
