--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link id="theme" rel="stylesheet" href="css/theme-1.css" >
+    <link rel="stylesheet" href="css/theme-style.css" >
+    
+    <link rel="stylesheet" href="css/theme-1.css" id="theme">
 </head>
 <body>
     <header>
@@ -17,7 +19,11 @@
     </header>
 
     <main>main</main>
-    <footer>footer</footer>
+    <footer>footer
+        <div id="themePicker">
+            
+        </div>
+    </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
